--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kysmrdesktop.nullix.at",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Keyboard simulation on your desktop by using your fingerprint on your mobile device.",
   "main": "scripts/main.js",
   "scripts": {
@@ -23,14 +23,14 @@
     "electron-rebuild": "^1.8.2"
   },
   "dependencies": {
-    "auto-launch": "^5.0.5",
     "crypto-js": "^3.1.9-1",
     "electron-reload": "^1.3.0",
     "electron-store": "^2.0.0",
     "ip": "^1.1.5",
     "qrcode": "^1.3.2",
     "querystring": "^0.2.0",
-    "robotjs": "^0.5.1"
+    "robotjs": "^0.5.1",
+    "winreg": "^1.2.4"
   },
   "build": {
     "appId": "kysmrdesktop.nullix.at",
@@ -46,7 +46,7 @@
       "allowToChangeInstallationDirectory": true,
       "installerIcon": "build/icon.ico",
       "uninstallerIcon": "build/icon.ico",
-      "artifactName": "${productName}-${version}.${ext}",
+      "artifactName": "${productName}-installer.${ext}",
       "runAfterFinish": false
     },
     "mac": {
